--- a/shows.html
+++ b/shows.html
@@ -46,12 +46,12 @@
 
 <div class="container h-100" style="">
   <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center" style="margin-top:11%;">
+      <div class="col-12 align-self-center">
         <div class="row justify-content-center" id="flyers">
           <img src="img/flyers.jpg">
-          <div id="tix" style="text-align: center;">
+        </div>
+        <div class="row justify-content-center" style="margin-top: 70px;">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
-          </div>
         </div>
     </div>   
   </div>
