--- a/shows.html
+++ b/shows.html
@@ -50,6 +50,9 @@
         <div class="row justify-content-center" id="flyers">
           <img src="img/flyers.jpg">
         </div>
+        <div class="row justify-content-center" id="flyers-m">
+          <img src="img/flyers-m.jpg">
+        </div>
         <div class="row justify-content-center" id="tix">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">buy tickets</a>
         </div>
