--- a/shows.html
+++ b/shows.html
@@ -46,7 +46,7 @@
 
 <div class="container h-100" style="">
   <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center">
+      <div class="col-12 align-self-center" id="fly-wrapper">
         <div class="row justify-content-center" id="flyers">
           <img src="img/flyers.jpg">
         </div>
