--- a/credits/index.html
+++ b/credits/index.html
@@ -13,10 +13,10 @@
 
   <title>ROY BLAIR</title>
 
-  <link rel="icon" href="logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/credits.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/hover.css">
+  <link rel="icon" href="../logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/credits.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/hover.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -29,54 +29,33 @@
 </head>
 <body>
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="/"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
+    <a class="button hvr-grow" href="/music"><img src="../img/music.png"/>
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
+    <a  class="button hvr-grow" href="/shows"><img src="../img/shows.png"/>
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="/lookbook"><img src="../img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
-      <br/><img id="credits-underline" style="" src="img/underline.png" />
+    <a class="button hvr-grow" href="/credits"><img src="../img/credits.png"/>
+      <br/><img id="credits-underline" style="" src="../img/underline.png" />
     </a>
   </div>
 
   <div class="container-fluid h-100" style="padding: 0;overflow: hidden;">
-    <!--
-    <div class="row h-100 justify-content-center sidebar" style="float:right;z-index:105;height:96% !important"> 
-      <div class="align-self-center" style="z-index: 1000; width:30px;">
-        <p class="social" style="margin-bottom: 60px">><a href="https://twitter.com/royblair_">TWITTER</a></p>
-        <p class="social" style="margin-bottom: 70px"><a href="https://www.instagram.com/royblair_/">INSTAGRAM</a></p>
-        <p class="social" style="margin-bottom: 58px;"><a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA">YOUTUBE</a></p>
-        <p class="social" style="margin-bottom: 83px"><a href="https://soundcloud.com/royblair">SOUNDCLOUD</a></p>
-        <p class="social" style="margin-bottom: 0px"><a href="mailto:royblairmgmt@gmail.com">CONTACT</a></p>
-      </div>
-    </div>
--->
     <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;margin-left:-28px !important;"> 
       <div class="align-self-center" style="z-index:100;">    
-        <img id="cath" src="img/catheaven.png" style="z-index:100;"/></a>
+        <img id="cath" src="../img/catheaven.png" style="z-index:100;"/></a>
       </div>
     </div>
-
-    <!--
-    <div style="position: absolute;bottom: 0;right: 0;z-index:108;">
-      <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img class="icon-link" src="img/spotify-white.png"></a>
-      <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img class="icon-link" src="img/apple-white.png"></a>
-      <a href="https://play.google.com/store/music/album/Roy_Blair_Cat_Heaven?id=B4clujticxginkvlyk5eosnuuly"><img class="icon-link last-link" src="img/google-white.png"></a>
-    </div>
-  -->
-
     <div class="wrapper" style="z-index:100;">
-
       <div class="row">
        <p class='songtitle' style="padding-top:0px;">"GROW UP"</p>
      </div>
@@ -365,7 +344,7 @@
  </div>
 </div>
 <div class="row">
-  <img style="margin: 0 auto;width: 110px;height: 100px;" src="img/catheaven-logo.png" />
+  <img style="margin: 0 auto;width: 110px;height: 100px;" src="../img/catheaven-logo.png" />
 </div>
 
 </div>
@@ -373,9 +352,9 @@
 </div>
 
 <div class="fullscreen-bg">
-  <video muted autoplay playsinline poster="img/placeholder.png" id="vid1" class="fullscreen-bg__video">
-    <source src="img/websiteloop.webm" type=”video/webm”>
-      <source src="img/websiteloop.mp4" type="video/mp4">
+  <video muted autoplay playsinline poster="../img/placeholder.png" id="vid1" class="fullscreen-bg__video">
+    <source src="../img/websiteloop.webm" type=”video/webm”>
+      <source src="../img/websiteloop.mp4" type="video/mp4">
       </video>
     </div>
 
@@ -385,7 +364,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <!--<script src="js/jquery.iframetracker.js"></script>-->
-    <script src="js/credits.js"></script>
+    <script src="../js/credits.js"></script>
   </body>
   </html>
