--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="/"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
+    <a class="button hvr-grow" href="/music"><img src="img/music.png"/>
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
+    <a  class="button hvr-grow" href="/shows"><img src="img/shows.png"/>
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="/lookbook"><img src="img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
+    <a class="button hvr-grow" href="/credits"><img src="img/credits.png"/>
     </a>
   </div>
 
