--- a/lookbook/index.html
+++ b/lookbook/index.html
@@ -13,12 +13,12 @@
 
   <title>ROY BLAIR</title>
 
-  <link rel="icon" href="logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/lookbook.css">
-  <link rel="stylesheet" href="css/hover.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+  <link rel="icon" href="../logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/lookbook.css">
+  <link rel="stylesheet" href="../css/hover.css">
+  <link rel="stylesheet" href="../css/slick.css">
+  <link rel="stylesheet" type="text/css" href="../css/slick-theme.css"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -29,59 +29,49 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background: url(img/backgrounds/blackmamba.jpg);">    <!--#f1edec pretty grey-->
+<body style="background: url(../img/backgrounds/blackmamba.jpg);">    <!--#f1edec pretty grey-->
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="/"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
+    <a class="button hvr-grow" href="/music"><img src="../img/music.png"/>
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
+    <a  class="button hvr-grow" href="/shows"><img src="../img/shows.png"/>
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
-      <br/><img id="lookbook-underline" src="img/underline.png" />
+    <a class="button hvr-grow" href="/lookbook"><img src="../img/lookbook.png"/>
+      <br/><img id="lookbook-underline" src="../img/underline.png" />
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
+    <a class="button hvr-grow" href="/credits"><img src="../img/credits.png"/>
     </a>
   </div>
-
 
     <div class="container h-100" style="margin-left: 0px;margin-right: 0px;max-width: 100%;">
       <div class="row h-100 justify-content-center">
         <div class="col-12 align-self-center" id="shop-main">
           <div class="row justify-content-center">
             <div id="lookbook-imgs" class="slider">
-              <!--<div><img src="img/lookbook/tesla.png"/></div>-->
-              <div><img src="img/lookbook/1.PNG"/></div>
-              <div><img src="img/lookbook/2.PNG"/></div>
-              <div><img src="img/lookbook/3.png"/></div>
+              <div><img src="../img/lookbook/1.PNG"/></div>
+              <div><img src="../img/lookbook/2.PNG"/></div>
+              <div><img src="../img/lookbook/3.png"/></div>
             </div>
-            <!--
-                <div class="slider" style="width:100%">
-                  <div><p>your content</p></div>
-                  <div><p>your content</p></div>
-                  <div><p>your content</p></div>
-                </div>
-              -->
           </div>
         </div>
       </div>
     </div>
-
 
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
-  <script src="js/main.js"></script>
-  <script src="js/slick.js"></script>
-  <script src="js/lookbook.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/slick.js"></script>
+  <script src="../js/lookbook.js"></script>
 </body>
 </html>
