--- a/music/index.html
+++ b/music/index.html
@@ -13,10 +13,10 @@
 
   <title>ROY BLAIR</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-  <link rel="icon" href="logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/music.css">
-  <link rel="stylesheet" href="css/hover.css">
+  <link rel="icon" href="../logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/music.css">
+  <link rel="stylesheet" href="../css/hover.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -29,23 +29,23 @@
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="/"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
-      <br/><img id="music-underline" src="img/underline.png" />
+    <a class="button hvr-grow" href="/music"><img src="../img/music.png"/>
+      <br/><img id="music-underline" src="../img/underline.png" />
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
+    <a  class="button hvr-grow" href="/shows"><img src="../img/shows.png"/>
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="/lookbook"><img src="../img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
+    <a class="button hvr-grow" href="/credits"><img src="../img/credits.png"/>
     </a>
   </div>
 
@@ -54,14 +54,14 @@
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
           <div class="col-4" id="music-right">
-            <a href="music/catheaven.html"><p class="music-item"><i class="fas fa-play"></i>CAT HEAVEN<span>DEC 2017</span></p></a>
-            <a href="music/vans.html"><p class="music-item"><i class="fas fa-play"></i>VANS<span>OCT 2017</span></p></a>
-            <a href="music/shell.html"><p class="music-item"><i class="fas fa-play"></i>SHELL<span>JUL 2017</span></p></a>
+            <a href="/music/catheaven.html"><p class="music-item"><i class="fas fa-play"></i>CAT HEAVEN<span>DEC 2017</span></p></a>
+            <a href="/music/vans.html"><p class="music-item"><i class="fas fa-play"></i>VANS<span>OCT 2017</span></p></a>
+            <a href="/music/shell.html"><p class="music-item"><i class="fas fa-play"></i>SHELL<span>JUL 2017</span></p></a>
           </div>
           <div class="col-2" id="music-divider"></div>
           <div class="col-4" id="music-left">
-            <a href="music/uk.html"><p class="music-item"><i class="fas fa-play"></i>UK<span>JAN 2017</span></p></a>
-            <a href="music/sucker.html"><p class="music-item"><i class="fas fa-play"></i>SUCKER [DEMO]<span>JUL 2016</span></p></a>
+            <a href="/music/uk.html"><p class="music-item"><i class="fas fa-play"></i>UK<span>JAN 2017</span></p></a>
+            <a href="/music/sucker.html"><p class="music-item"><i class="fas fa-play"></i>SUCKER [DEMO]<span>JUL 2016</span></p></a>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
-  <script src="js/main.js"></script>
-  <script src="js/music.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/music.js"></script>
 </body>
 </html>
