--- a/shows/index.html
+++ b/shows/index.html
@@ -12,10 +12,10 @@
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
 
   <title>ROY BLAIR</title>
-  <link rel="icon" href="logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/shows.css">
-  <link rel="stylesheet" href="css/hover.css">
+  <link rel="icon" href="../logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/shows.css">
+  <link rel="stylesheet" href="../css/hover.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -28,23 +28,23 @@
 </head>
 <body>
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="/"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
+    <a class="button hvr-grow" href="/music"><img src="../img/music.png"/>
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
-      <br/><img id="shows-underline" src="img/underline.png" />
+    <a  class="button hvr-grow" href="/shows"><img src="../img/shows.png"/>
+      <br/><img id="shows-underline" src="../img/underline.png" />
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="/lookbook"><img src="../img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
+    <a class="button hvr-grow" href="/credits"><img src="../img/credits.png"/>
     </a>
   </div>
 
@@ -53,10 +53,10 @@
   <div class="row h-100 justify-content-center" style="">
       <div class="col-12 align-self-center" id="fly-wrapper">
         <div class="row justify-content-center" id="flyers">
-          <img src="img/flyers.jpg">
+          <img src="../img/flyers.jpg">
         </div>
         <div class="row justify-content-center" id="flyers-m">
-          <img src="img/flyers-m.jpg">
+          <img src="../img/flyers-m.jpg">
         </div>
         <div class="row justify-content-center" id="tix">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">buy tickets</a>
@@ -69,7 +69,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
-  <script src="js/main.js"></script>
-  <script src="js/shows.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/shows.js"></script>
 </body>
 </html>
