--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/home.css">
-  <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/jquery.fullpage.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -26,59 +25,32 @@
   </script>
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
-  <div class="menu-i" id="menu-item-roy">
-    <a href="/"><img src="img/catheaven-logo-white.png"/></a>
-  </div>
-  <div class="menu-i w-img" id="menu-item-music">
-    <a class="button hvr-grow" href="/music"><img src="img/music.png"/>
-    </a>
-  </div> 
-  <div class="menu-i w-img" id="menu-item-shows">
-    <a  class="button hvr-grow" href="/shows"><img src="img/shows.png"/>
-      </a>
-  </div>
-  <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="/lookbook"><img src="img/lookbook.png"/>
-    </a>
-  </div>
-  <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="/credits"><img src="img/credits.png"/>
-    </a>
-  </div>
 
-  <div id="fullpage">
-    <div class="section" style="height: 100%; width:100%;">
-      <div class="container h-100">
-        <div class="row h-100 justify-content-center">
-          <div class="col-12 align-self-center" style="margin-top:3%;">
-            <div class="row justify-content-center"> 
-                <p id="typedtext"></p>
-            </div>
-              <div class="row justify-content-center">
-                <div id="links">
-                  <a class="button hvr-grow" href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
-                  <a class="button hvr-grow" href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
-                  <a class="button hvr-grow" href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
-                  <a class="button hvr-grow" href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
-                  <a class="button hvr-grow" href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
-                  <a class="button hvr-grow" href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
-                  <a class="button hvr-grow" href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope.png"/></a>
-              </div>
-              </div>
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center">
+      <div class="col-12 align-self-center">
+        <div class="row justify-content-center"> 
+          <div class="col-5">
+           <ul>
+            <a id="shop-tab" href="/"><li>shop</li></a>
+            <a id="shows-tab" href="/shows"><li>shows</li></a>
+            <a id="music-tab" href="/music"><li>music</li></a>
+            <a id="credits-tab" href="/credits"><li>credits</li></a>
+          </ul>
           </div>
         </div>
-      </div>
-      <div class="menu-i" id="menu-item-plus">
-        <div data-menuanchor="tumblr"><a href="#tumblr"><img src="img/arrow-down.png"/></a></div>
-      </div>
-    </div>
-    <div class="section" data-anchor="tumblr" style="height: 200%; width:100%;background:#f9f6f6;">
-      <div class="container h-100" id="tumblrPage">
-        <div class="row h-100 justify-content-center">
-          <div class="col-12 align-self-center">
-            <div class="row justify-content-center"> 
-               <p style="color:#333">tumblr blog</p>
-            </div>
+        <div class="row justify-content-center"> 
+          <img id="shirt-home" src="img/cat-heaven-shirt.png"/>
+        </div>
+        <div class="row justify-content-center">
+          <div id="links">
+            <a class="button hvr-grow" href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
+            <a class="button hvr-grow" href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
+            <a class="button hvr-grow" href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
+            <a class="button hvr-grow" href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
+            <a class="button hvr-grow" href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
+            <a class="button hvr-grow" href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
+            <a class="button hvr-grow" href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope.png"/></a>
           </div>
         </div>
       </div>
@@ -86,13 +58,11 @@
   </div>
 
   <!--Javascript-->
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  <!--<script src="js/jquery.iframetracker.js"></script>-->
+
   <script src="js/main.js"></script>
   <script src="js/home.js"></script>
-  <script src="js/jquery.fullpage.min.js"></script>
 </body>
 </html>
